--- a/Notebooks/A - Knowledge transfer/5. Decision making under uncertainty.ipynb
+++ b/Notebooks/A - Knowledge transfer/5. Decision making under uncertainty.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definition of inflow and demand scenarios\n",
+    "## Definition of inflow and demand scenarios\n",
     "Let's consider a forecast period of 8 weeks, and load the uncertain forecasts of inflows (I) and water demand (d) for this period. Uncertainty in the forecasts is represented by an ensemble of 10 possible time series."
    ]
   },
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddf82dcfd9194d108e70f767ac50c58d",
+       "model_id": "c4e272fe3f6841b9a64f22765bfa9353",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Definition of other input parameters \n",
+    "## Definition of reservoir system \n",
     "Let's define other variables that are needed for the reservoir system simulation, such as the reservoir storage capacity, the environmental compensation flow, etc."
    ]
   },
@@ -132,7 +132,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Two-objective optimization\n",
+    "## Optimisation\n",
+    "### Two-objective optimisation\n",
     "\n",
     "The following code will run an automatic optimisation of the reservoir system, considering two objectives: Total Squared Deficit (TSD) and Total Pumping Costs (TPC):\n",
     "\n",
@@ -191,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot the optimisation results\n",
+    "### Plot the optimisation results\n",
     "We can visualise the tradeoffs between the two objectives in the Pareto front plot, which displays the combination of the two objective values in correspondence to a set of optimised solutions. Click on one point in the Pareto front to visualise the pumping scheduling that generates that performance, the associated time series of reservoir storages and releases, and some more information about the total pumped inflow and deficit volume.\n",
     "\n",
     "**Comment:** To represent the uncertainty of the forecasts the color intensity of the shaded areas varies according to the number of members of the forecast ensemble in which a certain value is reached."
@@ -205,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04d2731b2f25476199d78c999106db88",
+       "model_id": "a6201c1b0d064e4b961e27f781523e77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +228,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can simulate the system performance when implementing the pumping scheduling against the observed inflows and demands. For convenience, the figure below shows the Pareto front that we obtained from optimisation, including the point (in red) that we had chosen at the end of the previous step; and the ***actual*** performance delivered by that solution once evaluated against the observed inflows and demands (in black). The other plot shows the actual time series of reservoir releases and storages."
+    "## Evaluation\n",
+    "After 8 weeks, we can evaluate the quality of our optimised decisions against the inflows and demands that actually occured. \n",
+    "\n",
+    "<img src=\"../../util/images/Calendar2.jpg\" width=\"400px\"/>\n",
+    "\n",
+    "First, we load and plot the inflow and demand observations for our 8 weeks period:"
    ]
   },
   {
@@ -238,45 +244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "918a0935ee734c05a37733fdf5fc4fb0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(VBox(children=(Figure(animation_duration=1000, axes=[Axis(label='week', scale=Or…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "fig_pf,fig_wd,fig_st,fig_in,pareto_ens = Interactive_Pareto_front(\n",
-    "    N,I_fore,e_fore,d_fore,S0,Smax,Smin,env_min,c,solutions_optim_relea,results1_optim_relea,results2_optim_relea)\n",
-    "widgets.VBox([widgets.HBox([widgets.VBox([fig_in,fig_wd]),fig_pf]),widgets.HBox([fig_st])])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stochastic approach: evaluation\n",
-    "After 8 weeks, we can evaluate the quality of our optimised decisions against the inflows and demands that actually occured. \n",
-    "\n",
-    "<img src=\"../../util/images/Calendar2.jpg\" width=\"400px\"/>\n",
-    "\n",
-    "First, we load and plot the inflow and demand observations for our 8 weeks period:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "290577fd2cb7422382ed8594f35d3048",
+       "model_id": "b24771b4302e40ffb9681550a874176e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,13 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54256965a25b4380b421a725fd046d8e",
+       "model_id": "926b0999d7074a7ab04047399171e6db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,8 +302,7 @@
    "source": [
     "***Let's think about these questions***: <br>\n",
     "* Did you achieve more or less than what forecasted? why is that?<br>\n",
-    "* Going back to the Optimisation stage, would you choose a different Pareto front point? (You can actually do this by changing your choices above and re-running the code!) <br>\n",
-    "* Are some decisions (or points in the Pareto front) more uncertain? <br>\n",
+    "* Going back to the \"Plot the optimisation results\", would you choose a different Pareto front point? (You can actually do this by changing your choice and re-running the code above!) Can you find the point to make the supply deficit = 0 at a minimum pumping cost? <br>\n",
     "* What do you prefer, solutions with lower uncertainty but lower forecasted performance or solutions higher forecasted performance but with higher uncertainty? <br>"
    ]
   }
